--- a/app/src/main/res/menu/edit_view_menu.xml
+++ b/app/src/main/res/menu/edit_view_menu.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
-    <item android:id="@+id/edit"
-          android:title="Edit"
-          app:showAsAction="ifRoom"
-          android:icon="@drawable/ic_edit_black_24dp"/>
-
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <item
+        android:id="@+id/edit"
+        android:icon="@drawable/ic_edit_black_24dp"
+        android:title="@string/edit"
+        app:showAsAction="ifRoom"
+        tools:ignore="PrivateResource" />
 </menu>
