--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,13 +1,7 @@
-<network-security-config xmlns:tools="http://schemas.android.com/tools">
-    <base-config cleartextTrafficPermitted="true"
-        tools:ignore="InsecureBaseConfiguration">
-        <trust-anchors>
-            <certificates src="system"/>
-        </trust-anchors>
-    </base-config>
+<network-security-config>
     <debug-overrides>
         <trust-anchors>
-            <certificates src="user"/>
+            <certificates src="user" />
         </trust-anchors>
     </debug-overrides>
 </network-security-config>
