AccountFragment and it's Api calling

--- a/app/src/main/res/layout/fragment_update_account.xml
+++ b/app/src/main/res/layout/fragment_update_account.xml
@@ -27,6 +27,7 @@
             app:layout_constraintVertical_chainStyle="packed">
 
             <EditText
+                android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
